--- a/yes.html
+++ b/yes.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h5 class = "header_text">Hurrayyyy!!</h5>
+                <h5 class = "header_text">Hurrayyyy!! click this pig </h5>
             </div>
             <div class="gif_container" onclick="window.location.href='ilovemyg.html'">
                 <img src="https://cdn.discordapp.com/attachments/984120010769309717/1327951065022201919/605FDC20-491A-4465-AADC-5E47E819946C.jpg?ex=6784ee4e&is=67839cce&hm=b20f84545486aa09df9675cbff77b70c893f75dbef1a617bc1b5f4b19278312e&" alt="Cute animated illustration">
@@ -17,7 +17,7 @@
             <source src="" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <iframe id="myAudio" width="0" height="0" src="https://www.youtube.com/embed/dTS_aNfpbIM?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        
  <div>
     <style>
         .next-button {
