--- a/ilovemyg.html
+++ b/ilovemyg.html
@@ -23,5 +23,9 @@
         </div>
     </div>
     <script src="flower/flower_script.js"></script>
+      <video id="myVideo" width="0" height="0" controls autoplay style="display:none;">
+            <source src="" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
 </body>
 </html>
